--- a/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
@@ -139,7 +139,9 @@
     "Release",
     "ServiceConnection",
     "AgentPool",
-    "VariableGroup"
+    "VariableGroup",
+    "Repository",
+    "Feed"
   ],
   "AttestationExpiryPeriodInDays": {
     "Default": 90,
@@ -415,5 +417,6 @@
     "vso.release_execute",
     "vso.release_manage"
   ],
-  "DisableWarningMessage" : false
+  "DisableWarningMessage" : false,
+  "ResourceTypesUseCommonScan": ["Repository","Artifact", "Feed"]
 }
